<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/colleague_Name"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/Colleague_name"
        android:textSize="12sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/First_Impact"
        android:layout_weight="2.5"
        android:text="@string/Reinforcement"
        android:textSize="12sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/Possesion_infiniteCard"
        android:layout_weight="2.5"
        android:text="@string/Possession_count"
        android:textSize="12sp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/need_CardCount"
        android:text="@string/Need_count"
        android:textSize="12sp"
        android:layout_weight="1.5"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

</LinearLayout>